No longer downgrades the quality of your personal roboports, jeez. Cant believe I missed this ever since upgrading my personal roboports months ago.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.7
+Date: 2025-03-08
+  Changes:
+    - No longer downgrades the quality of your personal roboports, jeez!
+
+---------------------------------------------------------------------------------------------------
 Version: 0.1.6
 Date: 2025-01-01
   Changes:
